# vesuvius-volume-viewer

./: CMakeLists.txt  Main.qml  README.md  lineboxgeometry.cpp  linecrossgeometry.cpp  volumeraycaster.pro  volumetexturedata.cpp  volumetexturedata.h
.github/workflows/: cmake-multi-platform.yml
src/: lineboxgeometry.h  linecrossgeometry.h  storagezarr.cpp  storagezarr.h  volumetexturedata.cpp  volumetexturedata.h
